--- a/ngProject/ngProject/ngProject/frontend/src/index.html
+++ b/ngProject/ngProject/ngProject/frontend/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+<!-- <div>Index HTML Content</div>
+  --<app-welcome></app-welcome>
+<div>Test</div>-->
 </body>
 </html>
